# workspace-ml

./: pyproject.toml
spam_classifier/: classify.py  data_builder.py  evaluate.py  helpers.py  model.py  train.py
spam_classifier/docs/: README.md
